✨🤖 Fix mobile layout: add divider between filters, hide bottom divider, align dropdown menu
- Add separator line between topic pills and content type dropdown on mobile
- Hide the filters-divider below the dropdown on mobile
- Add bottom margin on facets container for spacing before results on mobile
- Align dropdown menu to left instead of right
- Reduce header margin-bottom from 32px to 16px

--- a/site/LatestPage.scss
+++ b/site/LatestPage.scss
@@ -7,7 +7,7 @@
     background-color: #fff;
     padding-top: 48px;
     padding-bottom: 32px;
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     h1 {
         margin: 0;
         margin-bottom: 4px;
@@ -20,8 +20,6 @@
     }
     @include sm-only {
         padding: 24px 0;
-        margin-bottom: 0;
-        background-color: $gray-5;
         h1 {
             font-size: 2rem;
         }
